demo/service/service-endpoint.yml
apiVersion: v1
kind: Service
metadata:
  name: service-endpoint
spec:
  ports:
    - port: 10249
      name: kube-proxy

---
apiVersion: v1
kind: Endpoints
metadata:
  name: service-endpoint
subsets:
  - addresses:
      - ip: 10.211.55.110
      - ip: 10.211.55.111
      - ip: 10.211.55.112
    ports:
      - port: 10249
        name: kube-proxy
      - port: 10250
        name: kube-proxy-2
