demo/service/nginx-ingress-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    k8s-app: default-http-backend
  namespace: ingress-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-http-backend
          image: gcr.io/google_containers/defaultbackend:1.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
  selector:
    matchLabels:
      k8s-app: default-http-backend

---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: ingress-nginx
  labels:
    k8s-app: default-http-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    k8s-app: default-http-backend

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mywebsite-ingress
  namespace: ingress-nginx
spec:
  rules:
    - host: mywebsite.com
      http:
        paths:
          - path: /demo
            backend:
              serviceName: default-http-backend
              servicePort: 8080

---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: dashboard-ingress
#  namespace: ingress-nginx
#spec:
#  rules:
#    - host: dashboard.k8s.com
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: kubernetes-dashboard
#              servicePort: 443
